修复FFmpeg等待问题